<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_reminder_white"
            android:title="@string/reminder" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_white"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language_white"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_volume"
            android:icon="@drawable/ic_volume_white"
            android:title="@string/volume" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_white"
            android:title="@string/about" />
    </group>

</menu>
